version 0.7.2 - xxx
 . Demos: ParticleDemo uses touches to move the center of the emitter (issue #138)
 . Demos: organized tests folder (issue #280)
 . Director: Attach uses 'bounds' not 'frame' (issue #233)
 . Menu: an empty menu can be crated (issue #277)
 . Particles: Use by default fire.pvr (issue #276)
 . Particles: resetSystem actually resets the system (issue #252)
 . Particles: texture is a property (issue #282)
 . SoundSupport: supports vorbis codec (issue #XXX)      <------------- XXX CREATE ISSUE XXX
 . TextureAtlas: fixed colorarray memory leak (issue #272)
 . TextureNode: texture is "retain" not "assign" (issue #230 and issue #274)
 . TileMapAtlas: supports fullpath (issue #220)
 
version 0.7.1 - 20-Mar-2009
 . Actions: added tags to actions (issue #222)
 . Actions: Spawns can be Speeded (issue #257)
 . Actions: Speed can be altered in runtime (part of issue #236)
 . AtlasSprite: Sprite sheet implementation (issue #238)
 . Chipmunk: cpVect is defined as a CGPoint (issue #260)
 . CocosNode: Camera is lazy alloced (issue #94)
 . CocosNode: addChild, removeChild:cleanup, getChildByTag family functions (issue #253)
 . CocosNode: added better comments, cleanup code (issue #219)
 . CocosNode: added RGB protocol: Atlas,Texture & ColorLayer conforms it (issue #234)
 . CocosNode: fixed memory leak when removeAndStop a node with children with actions (issue #254)
 . CocosNode: added transform local to world coordinates that supports rotation,scale & position (issue #207)
 . CocosNode: removed scale ivar (issue #231)
 . CocosNode: improved handling of nil parameters (issue #262)
 . CocosLive: filter by device id (issue #223)
 . CocosLive: category is UTF8'ized (issue #227)
 . CocosLive: using cc_playername instead of usr_playername (issue #242)
 . CocosLive: supports "update score" (issue #250)
 . Demos: added performance test (issue #243)
 . Director: FastDirector doesn't leak autoreleased objects (issue #221)